# seqanCoverage

./: CMakeLists.txt  README.md  calculate_statistics.cpp
